--- a/src/main/templates/build.properties
+++ b/src/main/templates/build.properties
@@ -1,5 +1,5 @@
 # Project Metadata
-project.version=${project.parent.version}
+project.version=${project.version}
 project.branch=${scmBranch}
 project.scm.revision=${buildNumber}
 
