--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-lucee-ui",
+  "name": "react-ui",
   "version": "1.0.0",
-  "description": "An example ui calling an API implemented with Lucee",
+  "description": "An example ui",
   "main": "index.js",
   "scripts": {
     "dev": "webpack -d --watch",
@@ -10,7 +10,6 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "axios": "^0.16.2",
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.1.18",
